--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .charts{
-    width: 500px;
+    width: 300px;
     border: 1px solid black;
     border-radius: 1%;
+}
+.rowChart{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    padding: 50px;
 }
 body{
     margin: 0 !important;
@@ -9,4 +16,44 @@ body{
 }
 #root{
     margin-bottom: 100px;
+}
+.underline-remove{
+    text-decoration: none;
+}
+.middle-of-screen{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.btn-dashboard{
+    padding: 10px;
+    border-radius: 10px;
+}
+@media (min-width:425px) {
+    .charts{
+        width: 400px;
+    }
+}
+@media (min-width:600px) {
+    .btn-dashboard{
+        width: 250px;
+        height: 100px;
+        border-radius: 10px;
+    }
+    .charts{
+        width: 500px;
+    }
+    .rowChart{
+        display: grid;
+        justify-content: space-around;
+        gap:20px;
+        padding: 50px;
+        align-items: center;
+    }
+}
+@media (min-width:1100px) {
+    .rowChart{
+        grid-template-columns: auto auto;
+    }
 }
